# ai-math-tutor

./: .gitignore  LICENSE  README.md  SIGNED.md  demo.py  footprint_report.md  kt_eval.ipynb  main.py  process_log.md  pyproject.toml
data/: curriculum_full.json  progress.db.enc
frontend/: .gitignore  index.html  index.jsx  package-lock.json  package.json
frontend/js/: api.js  app.js
frontend/js/components/: ActivityScreen.js  FeedbackModal.js  ProfileScreen.js  ReportScreen.js
frontend/js/utils/: anim.js  audio.js  emoji.js
frontend/src/: App.jsx  api.js  i18n.js  index.css
frontend/src/components/: ActivityScreen.jsx  FeedbackScreen.jsx  ProfileScreen.jsx  ProgressBar.jsx  ReportScreen.jsx  Stars.jsx  WelcomeScreen.jsx
frontend/src/utils/: audio.js  emoji.jsx
reports/: parent_report.py
scripts/: download_model.py  gen_child_audio.py  generate_data.py
server/: api.py
tutor/: adaptive.py  asr_adapt.py  curriculum_loader.py  feedback.py  lang_detect.py  progress_store.py  tts_engine.py  visual.py
