[project]
name = "ai-math-tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "onnxruntime>=1.18.0",
    "optimum>=1.20.0",
    "transformers>=4.40.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.1",
    "numpy>=1.26.0",
    "pillow>=10.3.0",
    "opencv-python-headless>=4.9.0",
    "langdetect>=1.0.9",
    "python-Levenshtein>=0.25.0",
    "cryptography>=42.0.0",
    "pyttsx3>=2.90",
    "qrcode[pil]>=7.4.2",
    "jinja2>=3.1.4",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "torch>=2.3.0",
    "jupyter>=1.0.0",
    "sounddevice>=0.5.5",
    "gradio>=4.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "optimum>=2.1.0",
    "ruff>=0.15.11",
]
